I think this is it?

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +98,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [],
@@ -127,53 +120,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_2 = []\n",
-    "\n",
-    "laptop = soup.find_all('div', {'class': 'content'})\n",
-    "\n",
-    "for lap in laptop:\n",
-    "    e = {'title':'', 'final-price':'', 'price-regular':'', 'sale-tag sale-tag-square':''}\n",
-    "    try:\n",
-    "        e['title'] = lap['title']\n",
-    "        e['final-price'] = lap['final-price']\n",
-    "        e['price-regular'] = lap['price-regular']\n",
-    "        e['sale-tag sale-tag-square'] = lap['sale-tag sale-tag-square']\n",
-    "        \n",
-    "        data_2.append(e)\n",
-    "    except:\n",
-    "        print(\"F\")\n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'pwd' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+      "<div class=\"product-item\" data-brand=\"Apple\" data-category=\"Laptop - Máy Vi Tính - Linh kiện/Laptop/Macbook\" data-id=\"56318256\" data-price=\"25289000\" data-score=\"\" data-seller-product-id=\"56318260\" data-title=\"Apple Macbook Air 2020 - 13 Inchs (i3-10th/ 8GB/ 256GB) - Hàng Chính Hãng\" product-sku=\"2335370074640\" rel=\"\">\n",
+      "<a class=\"\" data-id=\"56318256\" href=\"/apple-macbook-air-2020-13-inchs-i3-10th-8gb-256gb-hang-chinh-hang-p56318256.html?spid=56318260&amp;src=category-page-1846.8095&amp;2hi=0\" title=\"Apple Macbook Air 2020 - 13 Inchs (i3-10th/ 8GB/ 256GB) - Hàng Chính Hãng\">\n",
+      "<div class=\"content\">\n",
+      "<span class=\"image\">\n",
+      "<img alt=\"\" class=\"product-image img-responsive\" src=\"https://salt.tikicdn.com/cache/280x280/ts/product/49/40/2b/1ff7ac9e945200f2563c4d2eb8db02ee.jpg\"/>\n",
+      "<span class=\"product-right-icon\">\n",
+      "</span>\n",
+      "</span>\n",
+      "<p class=\"icons\">\n",
+      "</p>\n",
+      "<p class=\"title\">\n",
+      "                                    \n",
+      "                    \n",
+      "                                Apple Macbook Air 2020 - 13 Inchs (i3-10th/...            </p>\n",
+      "<p class=\"price-sale\">\n",
+      "<span class=\"final-price\">\n",
+      "                    25.289.000đ                                            <span class=\"sale-tag sale-tag-square\">-13%</span>\n",
+      "</span>\n",
+      "<span class=\"price-regular\">28.990.000đ</span>\n",
+      "<span class=\"sale-tag sale-tag-square\">-13%</span>\n",
+      "</p>\n",
+      "</div>\n",
+      "<div class=\"price-tag-wrap\">\n",
+      "</div>\n",
+      "<div class=\"review-wrap\">\n",
+      "<p class=\"rating\">\n",
+      "<span class=\"rating-content\">\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<span style=\"width:100%\">\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "<i class=\"star\"></i>\n",
+      "</span>\n",
+      "</span>\n",
+      "</p>\n",
+      "<p class=\"review\">(1 nhận xét)</p>\n",
+      "</div>\n",
+      "<div class=\"installment-wrapper\">\n",
+      "<p class=\"installment\">\n",
+      "<span class=\"installment-price-v2\">Trả góp 0%</span>\n",
+      "</p>\n",
+      "</div>\n",
+      "<div class=\"ship-label-wrapper\">\n",
+      "</div>\n",
+      "</a>\n",
+      "</div>\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "singular = soup.find('div', {'class': 'product-item'})\n",
+    "print(singular)"
+   ]
   }
  ],
  "metadata": {
